# Software_Architecture

./: .gitignore  workspace.dsl
lab_01/: docker-compose.yml  workspace.dsl
lab_01/.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
lab_01/decisions/: 0001-bd-for-cache.md
lab_01/documentation/: start.md
lab_02/: .dockeringnore  README.md  docker-compose.yml  init_table.py  requirements.txt  user_service.Dockerfile
lab_02/database/: database.cpp  database.h  user.cpp  user.h
lab_02/user_service/: index.yml  start.sh
lab_02/user_service/handlers/: user_handler.cpp
lab_03/: docker-compose.yml  init_table.py  order_service.Dockerfile
lab_03/database/: mongodb.cpp
lab_03/order_service/handlers/: order_handler.cpp
lab_03/service_service/: start.sh
lab_03/user_service/: start.sh
lab_03/user_service/handlers/: user_handler.cpp
lab_04/: Makefile  docker-compose.yml  service_service.Dockerfile  user_service.Dockerfile
lab_04/database/: order.cpp
lab_04/order_service/: CMakeLists.txt  index.yml
lab_04/order_service/handlers/: order_handler.h
lab_05/: order_service.Dockerfile  order_service.Dockerfile.dockerignore  service_service.Dockerfile.dockerignore
lab_05/database/: order.h  service.cpp  service.h  user.cpp
lab_05/order_service/: start.sh
lab_05/service_service/: CMakeLists.txt  http_request_factory.h  index.yml
lab_05/service_service/handlers/: service_handler.cpp  service_handler.h
lab_06/: user_service.Dockerfile.dockerignore
lab_06/database/: user.h
lab_06/order_service/: http_request_factory.h
(+1 files in other folders)
